# tryg-home-assignment

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/store/v1/: store.proto
crates/client/: Cargo.toml
crates/client/examples/: basic_usage.rs
crates/client/src/: grpc.rs  lib.rs  rest.rs  types.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: command_hello.rs  command_server.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: readable_size.rs
crates/db/: Cargo.toml
crates/db/src/: batch.rs  compaction.rs  db.rs  err.rs  format.rs  lib.rs  mem.rs
crates/db/src/memtable/: immut.rs  mod.rs
crates/db/src/sst/: block.rs  err.rs  mod.rs  table.rs
crates/db/src/wal/: mod.rs  writer.rs
crates/db/tests/: compaction_integration.rs
crates/server/: Cargo.toml
crates/server/src/: grpc.rs  http.rs  lib.rs
crates/server/src/services/: mod.rs  store.rs  store_grpc.rs  store_rest.rs
docker/: .dockerignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml
docs/: format.md  manifest.md  project_overview.md
scripts/: README.md  run_tests.sh  test_server.sh
