[package]
name = "rsketch-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

# gRPC dependencies
prost.workspace = true
tonic.workspace = true

# HTTP client dependencies
reqwest.workspace = true
url.workspace = true

# Internal dependencies
tryg-api = { path = "../api" }
urlencoding = "2.1.3"

[dev-dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio-test = "0.4"
tracing-subscriber = "0.3"
tryg-db = { path = "../db" }
tryg-server = { path = "../server" }
