[package]
name = "rsketch-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bincode.workspace = true
bon.workspace = true
byteorder.workspace = true
crc32fast.workspace = true
crossbeam-skiplist = "^0.1.3"
derive_more.workspace = true
rangemap.workspace = true
rsketch-common = { path = "../common" }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
test-case.workspace = true
value-log = "^1.9.0"
