[package]
name = "rsketch-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bincode.workspace = true
bon.workspace = true
byteorder.workspace = true
crc32fast.workspace = true
crossbeam-skiplist = "^0.1.3"
derive_more.workspace = true
fusio.workspace = true
okaywal = "^0.3.1"
rangemap.workspace = true
rsketch-common = { path = "../common" }
serde.workspace = true
snafu.workspace = true
strum.workspace = true
strum_macros.workspace = true
test-case.workspace = true
tokio.workspace = true
tracing.workspace = true
value-log = "^1.9.0"

[dev-dependencies]
tempfile = "3.8"
