[package]
name = "tryg-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
defer = { workspace = true }
# fastrace = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tryg-api = { path = "../api" }
tryg-common = { path = "../common" }
tryg-db = { path = "../db" }

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.8"
